--- a/src/components/editor/inspector/inspector.scss
+++ b/src/components/editor/inspector/inspector.scss
@@ -1,24 +1,15 @@
 .editor__inspector {
   overflow-x: hidden;
-  overflow-y: scroll;
-  width: 18rem;
-  z-index: 78;
+  overflow-y: auto;
+  width: 20rem;
   box-shadow: -1px 0px 2px rgb(0 0 0 / 0.1);
   background-color: rgb(250, 250, 250);
 
-  .hr {
-    margin-block: 0.5rem;
-    height: 1px;
-    width: 95%;
-    margin-inline: auto;
-    background: rgb(230, 230, 230);
+  .space {
+    height: 2rem;
   }
-
   .head {
-    font-weight: bold;
     margin-left: 1rem;
-    margin-block: 1rem;
-    color: rgb(64, 64, 64);
   }
 
   .fields {
