--- a/src/components/editor/topbar/topbar.scss
+++ b/src/components/editor/topbar/topbar.scss
@@ -1,13 +1,21 @@
+@import "../../../styles/variables";
+
 .editor__topbar {
-    width: 100vw;
-    height: 3rem;
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 80;
-    box-shadow: 0px 1px 2px rgb(0 0 0 / 0.1);
-    font-size: 0.9rem;
-    font-weight: bold;
-    background-color: rgb(250, 250, 250);
+  height: 3rem;
+  z-index: 5;
+  background: $color-white;
+  box-shadow: $box-shadow-dull;
+
+  .left {
+    opacity: 0;
   }
+  .save {
+    margin-right: 1rem;
+    padding: 0.3rem;
+    background: transparent;
+    outline: 2px solid $color-primary;
+    border-radius: 0.2rem;
+    border: none;
+    color: $color-primary;
+  }
+}
