--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 * {
   padding: 0;
   margin: 0;
@@ -12,4 +14,130 @@
 body {
   overflow: hidden;
   background-color: #ffffff;
+}
+
+// CLASS STYLES
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.justify_center {
+  justify-content: center;
+}
+
+.justify_between {
+  justify-content: space-between;
+}
+
+.full_width {
+  width: 100vw;
+}
+
+.full_height {
+  height: 100vh;
+}
+
+.text_bold {
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: $color-black;
+}
+
+.head {
+  font-weight: bold;
+
+  margin-block: 1rem;
+  color: rgb(64, 64, 64);
+}
+
+.action_button {
+  width: 100%;
+  padding: 0.5rem 0.8rem;
+  font-size: 1.1rem;
+  background: transparent;
+  border: 2px solid $color-primary;
+  border-radius: $border-radius;
+  color: $color-primary;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+.hr {
+  margin-block: 0.5rem;
+  height: 1px;
+  width: 95%;
+  margin-inline: auto;
+  background: rgb(230, 230, 230);
+}
+
+input[type="range"] {
+  appearance: none;
+  overflow: hidden;
+  height: 10px;
+  box-shadow: $box-shadow;
+  background: #e8e8e8;
+  outline: none;
+  transition: opacity 0.2s;
+  border-radius: 100px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 11px;
+  height: 11px;
+  background: $color-primary;
+  cursor: pointer;
+  border-radius: 100%;
+  box-shadow: -80px 0 0 75px $color-primary-500;
+}
+
+button {
+  cursor: pointer;
+  &:focus-visible {
+    appearance: none;
+  }
+}
+
+.tabs {
+  display: flex;
+  padding: 0.2rem;
+  margin-inline: auto;
+  width: fit-content;
+  background: #f2f2f2;
+  border-radius: 0.5rem;
+
+  .tab {
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    color: rgb(168, 168, 168);
+    font-size: 0.9rem;
+    transition: all 0.2s ease;
+
+    cursor: pointer;
+
+    &.tab--active {
+      font-weight: bold;
+      box-shadow: 0px 1px 5px rgb(0 0 0 / 0.2);
+      background-color: white;
+      color: rgb(100, 100, 100);
+    }
+  }
+}
+
+// SCROLL BAR
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px $color-white-500;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $color-black-500;
+  border-radius: 10px;
 }
