--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,12 @@
+$color-primary-1200: #1584ce;
+$color-primary-1100: #1691e2;
 $color-primary: #019aff;
 $color-primary-500: #6bbef5;
 $color-white: #fff;
 $color-white-500: #f3ebef;
 $color-black: #404040;
 $color-black-500: #a8a8a8;
+$box-shadow-extra: 0px 0px 10px rgb(0 0 0 / 0.2);
 $box-shadow: 0px 1px 5px rgb(0 0 0 / 0.2);
 $box-shadow-dull: 0px 1px 1px rgb(0 0 0 / 0.05);
 $border-radius: 0.5rem;
