--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
   margin: 0;
   box-sizing: border-box;
   transform-origin: top left;
+  font-family: 'Poppins';
 }
 
 .canvas {
@@ -13,7 +14,7 @@
 
 body {
   overflow: hidden;
-  background-color: #ffffff;
+  background-color: white;
 }
 
 // CLASS STYLES
