--- a/src/components/editor/topbar/topbar.scss
+++ b/src/components/editor/topbar/topbar.scss
@@ -1,21 +1,122 @@
 @import "../../../styles/variables";
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 98;
+
+  background: $color-white;
+  opacity: 0.9;
+  backdrop-filter: blur(10px);
+
+  width: 100vw;
+  height: 100vh;
+}
+
+.save_modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99;
+
+  width: fit-content;
+  height: fit-content;
+  background: white;
+  border-radius: $border-radius;
+  box-shadow: $box-shadow;
+  padding: 2rem;
+
+  p {
+    width: fit-content;
+    margin-inline: auto;
+    &:nth-child(1) {
+      font-size: 2rem;
+      color: $color-primary;
+    }
+
+    &:nth-child(2) {
+      color: red;
+      font-size: 1rem;
+    }
+  }
+}
+
 .editor__topbar {
   height: 3rem;
   z-index: 5;
   background: $color-white;
   box-shadow: $box-shadow-dull;
 
+
   .left {
-    opacity: 0;
+    height: 100%;
+    padding: 0.6rem;
+    display: flex;
+    gap: 1rem;
+    align-items: end;
+
+    .menu {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      .menu-item {
+        position: relative;
+
+        .disp {
+          font-weight: bold;
+          cursor: pointer;
+          user-select: none;
+        }
+
+        .opt {
+          position: absolute;
+          z-index: 95;
+          background: white;
+          box-shadow: $box-shadow-extra;
+          padding: 1rem;
+          display: flex;
+          flex-direction: column;
+          align-items: start;
+          justify-content: space-between;
+          border-radius: $border-radius;
+          min-width: 10vw;
+          width: fit-content;
+          height: fit-content;
+          user-select: none;
+          gap: 1rem;
+
+          .opt-item {
+            cursor: pointer;
+          }
+        }
+
+      }
+    }
+
+    .logo {
+      height: 100%;
+      img {
+        height: 100%;
+      }
+    }
   }
-  .save {
-    margin-right: 1rem;
-    padding: 0.3rem;
-    background: transparent;
-    outline: 2px solid $color-primary;
-    border-radius: 0.2rem;
-    border: none;
-    color: $color-primary;
+
+  .center {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+  }
+
+  .right {
+    display: flex;
+    margin-right: 0.6rem;
+
+    a, p {
+      font-size: 0.8rem;
+      color: $color-black-500;
+    }
   }
 }
+
