--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,8 @@
 @import "./variables";
-
+html {
+  height: 100svh;
+  max-height: 100svh;
+}
 * {
   padding: 0;
   margin: 0;
@@ -55,8 +58,8 @@ body {
 
 .action_button {
   width: 100%;
-  padding: 0.5rem 0.8rem;
-  font-size: 1.1rem;
+  padding: 0.4rem 0.6rem;
+  font-size: 1rem;
   background: transparent;
   border: 2px solid $color-primary;
   border-radius: $border-radius;
